--- a/index.html
+++ b/index.html
@@ -9,16 +9,37 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     
     <title>Document</title>
-    <!-- CSS only -->
 </head>
 <body>
     <header id="menuNav"></header>
-    <div id="titulo" class="titulo"></div>
-    <script src="./main.js"></script>
+    <main>
+        <h2>Ingrese los datos del cliente (Todos los campos son requeridos)</h2>
+        <!-- Formulario de registro de cliente -->
+        <form id="customerForm" action="">
+            <div class="input-group">
+                <span class="input-group-text">Nombre(s) y Apellido</span>
+                <input type="text" id="name"aria-label="Nombre" class="form-control" required/>
+                <input type="text" id="lastName" aria-label="Apellido" class="form-control" required/>
+            </div>
+            <div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="inputGroup-sizing-default">RFC</span>
+                    <input id="rfc" type="text" class="form-control" aria-label="rfc" aria-describedby="inputGroup-sizing-default" required/>
+                  </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Guardar</button>
+        </form>
+
+        
+        <button type="button" class="btn btn-secondary" id="showInfo">Mostrar Info Guardada</button>
+        <button type="button" class="btn btn-danger" id="deleteInfo">Borrar Info</button>
+        <div id="infoContainer"></div>
+    </main>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
     </script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
