--- a/factura.html
+++ b/factura.html
@@ -99,6 +99,8 @@
             </div>
         </section>
     </main>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./main.js"></script>
+    
 </body>
 </html>
